--- a/package.json
+++ b/package.json
@@ -2,22 +2,24 @@
   "name": "webpack-react-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --open --mode development --hot",
     "build": "webpack --mode production"
   },
   "keywords": [],
-  "author": "",
+  "author": {
+    "name": "@shaneCodes",
+    "email": "shane@swalker.dev"
+  },
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.23.3",
     "@babel/preset-env": "^7.23.3",
     "@babel/preset-react": "^7.23.3",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
     "babel-loader": "^9.1.3",
     "html-webpack-plugin": "^5.5.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "ts-loader": "^9.5.0",
     "typescript": "^5.2.2",
     "webpack": "^5.89.0",
@@ -25,7 +27,7 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
